Conexion a la tabla que contienen los datos de las materias cursadas en el cuadrimestre actual

--- a/WebApplication1/WebApplication1/Practica 5.csproj
+++ b/WebApplication1/WebApplication1/Practica 5.csproj
@@ -155,6 +155,24 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\ModelMaterias.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelMaterias.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ModelMaterias.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelMaterias.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ModelMaterias.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModelMaterias.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Students.cs">
+      <DependentUpon>ModelMaterias.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -176,6 +194,16 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Content Include="Models\ModelMaterias.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ModelMaterias.edmx</DependentUpon>
+      <LastGenOutput>ModelMaterias.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\ModelMaterias.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ModelMaterias.edmx</DependentUpon>
+      <LastGenOutput>ModelMaterias.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <EntityDeploy Include="Models\Model1.edmx">
@@ -184,6 +212,13 @@
     </EntityDeploy>
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
+    </Content>
+    <EntityDeploy Include="Models\ModelMaterias.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ModelMaterias.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\ModelMaterias.edmx.diagram">
+      <DependentUpon>ModelMaterias.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
